style.css
body {
	font-family: Verdana, Helvetica, sans-serif;
	padding-top: 45px;
	background: #EEEEEE;
	color: #5a5a5a;
	/*	font-family:"Courier New",courier, monospace;*/
}

.tablediv { 
	background: #FEFEFE;
	padding-bottom: 35px;
    margin-bottom: 20px;
    background-color: #fff;
    border: 1px solid transparent;
    border-radius: 4px;
    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
    box-shadow: 0 1px 1px rgba(0,0,0,.05);
}

.vulkanlogo {
	padding-right:10px;
}

.error {
	width:50%;
	margin-top: 50px;
	padding-bottom : 25px;
}

.datatables_filter { 
	float: left; 
	text-align: left; 
	padding-bottom: 10px;
}

.content {
	margin: 5px;
}

td.caption {
	font-size:1.0em;
	font-weight:normal !important;
}

th, td {
    white-space: nowrap;	
}

th {
	color:#a31d21;
	font-weight:normal !important;
}

th.sorting::after, th.sorting_asc::after, th.sorting_desc::after {
	color: #000;
}

.tablehead {
	/*color:#a31d21;*/	
	/*font-weight:bold !important;*/
	/*background: #ABABAB;*/
	/*color:#FFFFFF;*/
	color:#a31d21;
	padding:5px;
	/*font-size:1.1em;*/
}

.table-striped>tbody>tr:nth-of-type(odd) {
   background-color: #f7f7f7 !important;
}

.fullwidthtable {
	width:100%;
}

.parentdiv {
	width: 100%;
	background:#FFF;
}

.supported {
	color:#088A29;
}

.unsupported {
	color:#FF0000;
}

.unsupported2 {
	color:#cc0000;
}

.unsupported-grey {
	color: #9b9b9b;
}

.reportdiv {
	/*width:85%;*/
	/*width:85%;*/
	padding-top:10px;
	padding-bottom:15px;
/*	min-width:250px;
	max-width:800px;	*/
}

/* .nav-report {
	width: 75%;
} */

.nav-level1 {
    margin-left: -41px;
    margin-right: -41px;
	margin-top: -10px;
	text-align: left !important;
}

.nav-level1 > li:first-child {
    margin-left: 25px;
}

.nav-tabs > li, .nav-pills > li {
    float:none;
    display:inline-block;
    *display:inline; /* ie7 fix */
     zoom:1; /* hasLayout ie7 trigger */
}

.nav-tabs, .nav-pills {
    text-align:center;
}

.tablediv {
	padding-top: 25px;
	padding-left: 40px;
	padding-right: 40px;
    border: 1px solid #ddd;
    border-top: 0px;	
	/*max-width: 1024px;*/
	/*width:auto;*/
}

.reporttable {
	/*width:auto;*/
}

.borderless tr td {
    border: none !important;
    padding: 0px !important;
}

.filterdiv {
	width:15%;
	min-width: 400px;
	padding-bottom: 10px;	
}

.filtertable {
    border: none !important;
    padding: 5px !important;
}

.filtertable td {
	padding-right:5px;
}



.reportheader {
    height: 65px;
	font-size: 1.5em;
    line-height: 40px;
	background: #333333;
	color: #FFFFFF;
	vertical-align: middle;
	line-height:65px;
}

.navbar-default {
    background-color: #222;
    border-color: #121212;
}

.navbar-text {
	color:#fff;
}

.navbar-default .navbar-nav>li>a {
    color: #fff;
}

.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
    background-color: #000;
    color: #fff;
}

h4 {
	font-size:1.2em;	
	font-weight:none;
}

.header {
	background: #f2f2f2;
	border-bottom: 1px solid #ddd;	
	color:#000;
	padding-top:15px;
	padding-bottom:5px;
	text-align:center;
	/*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
}

.pageheader {
	background: #fff;
	border-bottom: 1px solid #ddd;
	color:#000;
	padding:5px;
	text-align:center;	
    /*position: fixed;
    right: 0;
    left: 0;
    z-index: 1030;	*/
}

.header-span {
    line-height: 1.5em;	
	margin-bottom: 10px;
	padding-left: 10px;
	text-align: center;
}

.header-green {
	color: #4F8A10;
	background: #DFF2BF;
	border-left: 4px solid #3c763d;
}

.header-red {
	color: #D8000C;
	background: #FFBABA;
	border-left: 4px solid #a94442;
}

.header-blue {
	color: #00529B;
	background: #BDE5F8;
	border-left: 4px solid #31708f;
}

.header-yellow {
	color: #9F6000;
	background-color: #fcf8e3;
	border-left: 4px solid #8a6d3b;
}

.tableheader {
	border-bottom:1px solid gray;
	color:#31a9db;
	text-align:left;
	padding-bottom:5px;
	border-bottom:2px solid #31a9db; 
	margin-bottom:10px;
}

.firstrow {
	padding-left:20px; 
	padding-top:5px; 
	padding-bottom:5px; 
}

.caption
{
	color:#a31d21;
	font-weight:bold;
}

.group
{
	color:#a31d21;
	background-color: #f4f4f4 !important;	
}

.fieldcaption
{
	font-weight:normal;
	color:#000000;
	padding-left: 10px;
	padding-right : 5px;
	padding-top: 2px;
	padding-bottom: 2px;
	border-width: 0px;
}

.key
{
	width:1px;
	/*width:25%;*/
	/*color:#a31d21;	
	padding-left:50px;
	text-align:right;
	font-weight:bold;*/
}

.subkey
{
	width:1px;
	padding-left:25px !important;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;	
}

.value
{
}


.reportrow
{
	padding-left: 10px;
	padding-right : 5px;
	padding-top: 2px;
	padding-bottom: 2px;
}

.reportrowb
{
	background-color: #EFEFEF;
	padding-left: 10px;
	padding-right : 5px;
	padding-top: 2px;
	padding-bottom: 2px;
}

.reporttabelheader
{
	border-bottom:1px solid gray;
	font-weight:bold;
	color:#31a9db;
	text-align:left;
	border-bottom:2px solid #31a9db; 
	margin-bottom:5px;
}

table.extensionstats th
{
	background-color: #BCBCBC;
	color: #FFFFFF;
	padding: 5px;
	font-weight: bold;
	}

table.extensionstats td
{
	padding-left:10px;
	padding-top: 2px;
	padding-bottom: 2px;
	padding-right: 10px;
}


table.glversion td
{
	padding:5px;
	text-align:center;
}

table.glversion th
{
	background-color:#000000;
	color: #FFFFFF;
	padding:5px;
	text-align:center;
}

.extensionlist
{
	list-style-type:disc;
}

ul.extensionlist li
{
	margin-top: 0px;
	padding: 0px;
}

td.details-control {
    background: url('./images/details_open.png') no-repeat center center;
    cursor: pointer;
}
tr.shown td.details-control {
    background: url('./images/details_close.png') no-repeat center center;
}

a:link {  text-decoration:none !important; }
a:visited {  text-decoration:none !important; }
a:focus {  text-decoration:none !important; }
a:hover {  text-decoration:none !important; }

.filterinput {
	border: 1px solid #ccc;
	border-radius: 3px;
	padding: 5px;
	font-weight: normal;
}

.yadcf-filter {
	border: 1px solid #ccc;
	border-radius: 3px;
	padding: 3px;
	font-weight: normal;
	width: 120px;
}

.filter-240 {
	width: 240px;
}

.yadcf-filter-reset-button {
	display: none;
}

::-webkit-input-placeholder { /* Chrome/Opera/Safari */
  color: #BCBCBC;
}
::-moz-placeholder { /* Firefox 19+ */
  color: #BCBCBC;
}
:-ms-input-placeholder { /* IE 10+ */
  color: #BCBCBC;
}
:-moz-placeholder { /* Firefox 18- */
  color: #BCBCBC;
}

.button {
	background-color: #EEEEEE;
    border: 1px solid #ddd;
	padding: 6px 12px;
	border-radius: 4px;
	color: #337ab7;
	font-weight: normal;
}

.button:hover {
	background-color: #BCBCBC;
    border: 1px solid #ddd;
	padding: 6px 12px;
	border-radius: 4px;
	color: #000;
}

.inactive {
	color: #BABABA;
}

.divider-vertical {
	height: 50px;
	margin: 0 9px;
	border-left: 1px solid #333333;
	border-right: 1px solid #333333;
}

.flagtable td {
	padding: 2px;
	padding-right: 4px;
}

.na {
	color: #BABABA;
}

#overlay_devices {
    background-color: rgba(255, 255, 255, 1.0);
}

h1 {
	padding-top: 1em;
	text-align: center;
	font-size: 24px;
	margin: 0 !important;
	line-height: inherit;
}

.hint {
	color: #acacac;
}

.div-h-center {
	display: flex;
	justify-content: center;
	text-align: center;
}

.div-alert {
	display: inline-block;
}

.header-rotate {
	transform: rotate(-90deg);
	-webkit-transform: rotate(-90deg);
	-moz-transform: rotate(-90deg);
	-ms-transform: rotate(-90deg);
	-o-transform: rotate(-90deg);
	filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3); 
}

/* From https://www.jimmybonney.com/articles/column_header_rotation_css/ */

.table-header-rotated th.row-header{
	width: auto;
}
  
.table-header-rotated td{
	width: 40px;
	border-top: 1px solid rgb(221, 221, 221);
	border-left: 1px solid rgb(221, 221, 221);
	border-right: 1px solid rgb(221, 221, 221);
	vertical-align: middle;
	text-align: center;
}

.table-header-rotated th.rotate-45{
	height: 200px;
	width: 40px;
	min-width: 40px;
	max-width: 40px;
	position: relative;
	vertical-align: bottom;
	padding: 0;
	font-size: 10px;
	border-left: 0px; 
	border-right: 0px;	
}

.table-header-rotated th.rotate-45 > div{
	position: relative;
	top: 0px;
	height: 100%;
	overflow: hidden;
	border-left: 1px solid rgb(221, 221, 221);
	border-right: 1px solid rgb(221, 221, 221);
	border-top: 1px solid rgb(221, 221, 221);
	background-color: white;
}

.table-header-rotated th.rotate-45 span {
	-ms-transform: rotate(-90deg);
	-moz-transform: rotate(-90deg);
	-webkit-transform: rotate(-90deg);
	-o-transform: rotate(-90deg);
	transform: rotate(-90deg);
	position: absolute;
	bottom: 20px;
	/* left: -24px; */
	display: inline-block;
	width: 100%;
	/* width: 85px; */
	text-align: left;
}

.format-table {
	table-layout: fixed !important;
	/*width: auto; */
	border-left: 0px;
	border-top: 0px;
}

.format-table .format-name { 
	border-left-width: 1px !important;
	text-align: left;
}

.format-table-support {
	width: 40px !important;
	padding-left: 0px !important;
	padding-right: 0px !important;
	vertical-align: middle !important;
}

.queue-family-table {
	table-layout: fixed !important;
	/*width: auto; */
	border-left: 0px;
	border-top: 0px;
}

.queue-family-table .queue-family-name {
	border-left-width: 1px !important;
	text-align: left;
}


.rotated-table-column {
	width: 40px !important;
	padding-left: 0px !important;
	padding-right: 0px !important;
	vertical-align: middle !important;
}

.format-unsupported {
	color: #9b9b9b;
}

.icon-pad-right {
	padding-right: 5px;
}

.format-table-device
{
	text-align: left !important;
	width:1px;
	padding-left:25px !important;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;	
}

.format-table-format-name
{
	text-align: left !important;
	color:#a31d21;
	background-color: #f4f4f4 !important;	
}

.property-table
{
	width: auto;
	display: inline-block;
	padding-bottom: 15px;
}

